examples/test/testpolicy5012.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5012
  namespace: namespace270
spec:
  podSelector:
    matchLabels:
      key29: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value16
          key24: value6
          key34: value20
      podSelector:
        matchLabels:
          key26: value33
          key23: value27
